name:                ghcopts-play
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/k-bx/ghcopts-play#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov <k-bx@k-bx.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ghcopts-play
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -rtsopts -g
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
